# dataorc

./: .commitlintrc.yml  .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  README.md  databricks.yml  mkdocs.yml  pyproject.toml  release-please-config.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  docs.yml  lint-pr.yml  release.yml
docs/: changelogs.md  index.md  requirements.txt  version-matrix.md
docs/assets/changelog/: filter.js  styles.css
docs/changelog/: dataorc-utils.md  index.md
docs/macros/: __init__.py  constants.py  renderer.py
macros/: __init__.py  constants.py  discover.py  parser.py  renderer.py
scripts/: bootstrap-package.sh  update_version_matrix.py
