[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dataorc"
version = "0.1.1"
description = "Metapackage installing all other packages in dataorc family"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "dataorc-utils==0.1.0",
]

[tool.uv.sources]
dataorc-utils = { path = "packages/dataorc-utils" }
