[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dataorc"
version = "0.2.0"
license = "MIT"
license-files = ["LICENSE"]

dependencies = ["dataorc-utils==0.5.0"]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.21",
  "mkdocstrings>=0.30.1",
  "mkdocstrings-python>=1.12.1",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
dataorc-utils = { workspace = true }
